# picoI2C

./: CMakeLists.txt  README.md
header/: mpu6000.h  myi2c.h
src/: main.c  mpu6000.c  myi2c.c
